--- a/site/index.html
+++ b/site/index.html
@@ -36,8 +36,8 @@
                         <h3>One Week With The Mafia</h3>
 
                         <div class="links-bar">
-                            <a><img src="./assets/images/icons/steam-brands-solid.svg" alt="Steam"/></a>
-                            <a><img src="./assets/images/icons/itch-io-brands-solid.svg" alt="Itch"></a>
+                            <a href="https://store.steampowered.com/app/2656310/One_Week_With_The_Mafia/"><img src="./assets/images/icons/steam-brands-solid.svg" alt="Steam"/></a>
+                            <a href="https://bartholomeus-mortimis.itch.io/one-week-with-the-mafia"><img src="./assets/images/icons/itch-io-brands-solid.svg" alt="Itch"></a>
                         </div>
 
                         <p>Released November 4th, 2023</p>
@@ -54,7 +54,7 @@
                         <br>
                         <h3>The Factory Must Scale</h3>
                         <div class="links-bar">
-                            <a><img src="./assets/images/icons/itch-io-brands-solid.svg" alt="Itch"></a>
+                            <a href="https://bartholomeus-mortimis.itch.io/the-factory-must-scale"><img src="./assets/images/icons/itch-io-brands-solid.svg" alt="Itch"></a>
                         </div>
 
                         <p>Released August 20th, 2024</p>
@@ -73,7 +73,7 @@
                         <h3>The Swan, The Dungeon, <br>and The Machine Gun</h3>
 
                         <div class="links-bar">
-                            <a><img src="./assets/images/icons/itch-io-brands-solid.svg" alt="Itch"></a>
+                            <a href="https://bartholomeus-mortimis.itch.io/the-swan-the-dungeon-and-the-machine-gun"><img src="./assets/images/icons/itch-io-brands-solid.svg" alt="Itch"></a>
                         </div>
 
                         <p>Released January 8th, 2024</p>
@@ -92,7 +92,7 @@
         </div>
 
         <div id="footer">
-            <br>
+            <h5>Support Email - bartmorthelp@gmail.com</h5>
         </div>
 
     </div>
