--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 
 <head>
-    <title>bartmort.dev</title>
+    <title>Bartholomeus Mortimis</title>
     <link rel="stylesheet" href="./css/global.css">
+    <link rel="icon" type="image/x-icon" href="./assets/images/BartMort.ico">
 </head>
 
 <body>
