--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
         <div id="footer">
             <h2>Contact Me</h2>
-            <h4>Support Email - bartmort@protonmail.com</h4>
+            <h4>Email - bartmort@protonmail.com</h4>
         </div>
 
     </div>
