--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Bartholomeus Mortimis</title>
-    <link rel="stylesheet" href="./css/global.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="icon" type="image/x-icon" href="./assets/images/BartMort.ico">
 </head>
 
